<resources>
    <string name="app_name">TravelApp</string>
    <string name="google_maps_API_key">AIzaSyCDw4VAtEq6TZebwTfde3larSjUO5KTi7w</string>
    <string-array name="spinner_items">
        <item>Delhi</item>
        <item>Mumbai</item>
        <item>Banglore</item>
        <item>Pune</item>
        <item>Chennai</item>
        <item>Kolkata</item>
        <item>Jaipur</item>
        <item>Hyderabad</item>
        <item>Panjim</item>
        <item>Ahmedabad</item>
    </string-array>
    <string name="product">Product</string>
    <string name="color">Color</string>
    <string name="price">Price   : </string>
    <string name="tax">Tax   :</string>
    <string name="total">Total   :</string>
    <string name="size">Size</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="most_purchased">Most Purchased</string>
    <string name="most_shared">Most Shared</string>
    <string name="categories">Categories</string>
    <string name="products">Products</string>
    <string name="app">ECommerce App</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="tvRegister"><u>Dont have an account? SIGN UP</u></string>
    <string name="btnLogin">LOGIN</string>
    <string name="btnRegister">SIGN UP</string>
    <string name="tvlogin"><u>Already Have an Account?  Sign in</u> </string>
    <string name="emptyUsername">Username can not be empty!</string>
    <string name="emptyEmail">Email can not be empty!</string>
    <string name="emptyPassword">Password can not be empty!</string>
    <string name="passwordNotMatch">Password does not match!</string>
    <string name="navigation_drawer_open">Travel Guide</string>
    <string name="navigation_drawer_close">Travel Guide</string>
    <string name="navigation_drawer_destination">Destinations</string>
    <string name="navigation_drawer_travel">Travel</string>
    <string name="navigation_drawer_utilities">Utilities</string>
    <string name="navigation_drawer_about_us">About Us</string>
    <string name="navigation_drawer_signout">Sign Out</string>
    <string name="navigation_drawer_my_friends">My Friends</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_my_trips">My Trip</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_select_city">Select City</string>
    <string name="title_activity_shopping_currentcity">Shopping current city</string>
    <string name="title_activity_hotels">Hotels</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_fun_facts">FunFacts</string>
    <string name="title_activity_city_history">City History</string>
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="toast_invalid_username_or_password">Invalid username or password</string>
    <string name="hotel">HOTEL BOOKING</string>
    <string name="online_Shopping">ONLINE SHOPPING</string>
    <string name="real_time_locator">REAL TIME LOCATOR</string>
    <string name="fun_facts">Fun Facts</string>
    <string name="search_hint">What are you looking for…?</string>
    <string name="search_title">Cities</string>
    <string name="popular_cities">Most Popular Cities</string>
    <string name="title">Select items to display in map</string>
    <string name="choose">Select</string>
    <string name="no_activity_for_browser">No app found to open this website</string>
    <string name="nearby_places">Nearby Places</string>
    <string name="kms">kms</string>
    <string name="text_checklist">Checklist</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="delete_tasks">Are you sure you want to delete all completed tasks?</string>
    <string name="undo">Undo</string>
    <string name="deleted_task_message">Deleted all completed tasks</string>
    <string name="trip_city">Trip City :</string>
    <string name="trip_date">Trip Date :</string>
    <string name="prompt_trip_name">Enter trip Name</string>
    <string name="prompt_city_name">Select City</string>
    <string name="prompt_start_date">Select Trip Date</string>
    <string name="prompt_add_trip">Add trip</string>
    <string name="prompt_friend_name">Enter friend name</string>
    <string name="prompt_add_friend">Add New friend</string>
    <string name="text_started_on">Started on :  </string>
    <string name="progress_wait">Please wait…</string>
    <string name="trip_added">Trip added</string>
    <string name="friend_added">Friend added to trip</string>
    <string name="no_friend_selected">Please select a valid friend to add</string>
    <string name="my_trip">My Trips</string>
    <string name="no_trips">You don\'t have any trips. Click add button to get started</string>
    <string name="know_more_about">Know more about %1$s</string>
    <string name="friends_title">Travelling with someone? Add friends to this trip.</string>
    <string name="friends_show_title">Friends in this Trip</string>
    <string name="trip_name_updated">Trip name has been updated</string>
    <string name="cannot_edit">Trip name can\'t remain empty!</string>
    <string name="remove_friend_message">Are you sure you want to remove %1$s from this trip?</string>
    <string name="removed_friend_message">Successfully removed friend</string>
    <string name="trip_name_blank">Trip name can\'t be left blank</string>
    <string name="trip_city_blank">Trip city can\`t be left blank</string>
    <string name="trip_date_blank">Trip start date can\'t be left blank</string>
    <string name="remove_me_from_trip">Remove me from trip</string>
    <string name="remove_trip_message">Are you sure want to remove the trip?</string>
    <string name="trips_together_message">Your trips together…</string>
    <string name="remove_trip_success">Removed trip successfully!</string>
    <string name="no_items_available">No items available!</string>
    <string name="passwords_check">Passwords do not match!</string>
    <string name="location_enabled">Location enabled</string>
    <string name="location_not_enabled">Location not enabled</string>
    <string name="showing_hotels">Showing %1$s Hotels</string>
    <string name="share_intent_text">Share Contact Details</string>
    <string name="share_menu">Share</string>
    <string name="share_contact_qr">Hey! Here is my contact information. Shared Using Travel Mate app. Download it from Play Store : https://play.google.com/store/apps/details/?id=io.github.project.project_travel_mate</string>
    <string name="view_contact">View someone\'s Contact</string>
    <string name="bottom_info_string">Share this code with the people to share your contact details.</string>
    <string name="text_hangout">Locate on Map</string>
    <string name="text_monuments">Monuments</string>
    <string name="text_shopping">Shopping</string>
    <string name="text_restaurants">Restaurants</string>
    <string name="text_city_trends">City Trends</string>
    <string name="text_login"><u>Already a member? Login</u></string>
    <string name="text_signup_or"><u>Not registered yet? Create new account</u></string>
    <string name="text_go">Go</string>
    <string name="text_locate">Locate</string>
    <string name="text_more">More</string>
    <string name="text_title">Title</string>
    <string name="text_call">Call</string>
    <string name="text_book">Book</string>
    <string name="text_joining_date">Joined on %1$s</string>
    <string name="profile_picture_updated">Profile Picture Updated!</string>
    <string name="text_source">"Source : "</string>
    <string name="no_friends_message">You haven\'t added any trip with friends yet</string>
    <string name="interest_know_more">Know More</string>
    <string name="interest_fun_facts">Fun Facts</string>
    <string name="interest_weather">View Weather Forecast</string>
    <string name="interest_trends">City Trends</string>
    <string name="sample_state">Delhi</string>
    <string name="empty_description">No description available.</string>
    <string name="signout_message">Are you sure want to sign out?</string>
    <string name="positive_button">OK</string>
    <string name="default_name">--</string>
    <string name="email">Email</string>
    <string name="profile_icon">Profile_icon</string>
    <string name="mail_icon">mail_icon</string>
    <string name="info_icon">info_icon</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="invalid_password">Password must contain at least 1 Capital Alphabet, 1 Number and 1 Special Character.</string>
    <string name="password_length">Password must contain minimum 8 characters</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="my_profile">My Profile</string>
    <string name="name_updated">Name has been updated</string>
    <string name="text_share_profile">Share my profile</string>
    <string name="snackbar_no_share_app">No application to share.</string>
    <string name="share_chooser">Select app to send message…</string>
    <string name="share_profile_text">Hi! Checkout my Travel Mate profile: </string>
    <string name="status_updated">Status has been updated</string>
    <string name="cities_travelled">Cities visited </string>
    <string name="app_description">A must-have app for those interested in travel. The app provides users with various features from choosing the correct destination to making all the bookings and to easily organizing the trip.</string>
    <string name="version_code">Version Code :</string>
    <string name="fork_on_github">Fork on GitHub</string>
    <string name="view_contributors">View Contributors</string>
    <string name="report_a_bug">Report a Bug</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="join_slack">Join Slack</string>
    <string name="share_app">Share app</string>
    <string name="website">Website</string>
    <string name="buy_me_a_coffee">Buy us a coffee</string>
    <string name="choose_a_type_bugreport">Choose a Type:</string>
    <string name="hint_edit_text_bugreport">Describe your issue…</string>
    <string name="button_text_bugreport">Report</string>
    <string name="failure_message_bugreport">Failed to send issue…</string>
    <string name="success_message_bugreport">Issue Sent Successfully…</string>
    <string name="no_feedback_message">We would love to hear from you!Click on add button to send us feedback.</string>
    <string name="feedback_title">Reported Feedbacks</string>
    <string name="sample_date">20-Jul</string>
    <string name="humidity">%1$s humidity</string>
    <string name="text_weather">Weather Forecast</string>
    <string name="weather_forecast_message">Check weather forecast of the city you wish to travel to!</string>
    <string name="sign_out">Sign out</string>
    <string name="default_status">Write something about yourself…</string>
    <string name="no_notifications">You don\'t have any notifications.</string>
    <string name="mark_all_read_notifications">Do you want to mark all notifications as read?</string>
    <string name="username">\@%1$s </string>
    <string name="change_password_heading">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="read_notifications_message">Show my read notifications</string>
    <string name="done_label">Done</string>
</resources>