<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_city"
            android:icon="@drawable/ic_location_city_black"
            android:title="@string/navigation_drawer_destination" />

        <item
            android:id="@+id/nav_mytrips"
            android:icon="@drawable/mytrips"
            android:title="@string/my_trip" />

    </group>

    <group
        android:id="@+id/nav_grp2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/navigation_drawer_about_us" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/navigation_drawer_signout" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/navigation_drawer_settings" />
    </group>
</menu>

